--- a/drmemory/docs/download.dox
+++ b/drmemory/docs/download.dox
@@ -32,7 +32,17 @@ For more recent bug fixes and features prior to the next official release, [week
 
 Official Dr. Memory packages are hosted as [GitHub releases](https://github.com/DynamoRIO/drmemory/releases).
 
-The [2.3.0 release](https://github.com/DynamoRIO/drmemory/releases/tag/release_2.3.0):
+The [2.4.0 release](https://github.com/DynamoRIO/drmemory/releases/tag/release_2.4.0):
+
+  - [Dr. Memory installer for Windows (DrMemory-Windows-2.4.0-0.msi)](https://github.com/DynamoRIO/drmemory/releases/download/release_2.4.0/DrMemory-Windows-2.4.0-0.msi)
+
+  - [Dr. Memory zip file for portable/local installation on Windows (DrMemory-Windows-2.4.0-0.zip)](https://github.com/DynamoRIO/drmemory/releases/download/release_2.4.0/DrMemory-Windows-2.4.0-0.zip)
+
+  - [Dr. Memory for Linux (DrMemory-Linux-2.4.0-0.tar.gz)](https://github.com/DynamoRIO/drmemory/releases/download/release_2.4.0/DrMemory-Linux-2.4.0-0.tar.gz)
+
+  - [Dr. Memory for Mac -- alpha release (DrMemory-MacOS-2.4.0-0.tar.gz)](https://github.com/DynamoRIO/drmemory/releases/download/release_2.4.0/DrMemory-MacOS-2.4.0-0.tar.gz)
+
+The prior [2.3.0 release](https://github.com/DynamoRIO/drmemory/releases/tag/release_2.3.0):
 
   - [Dr. Memory installer for Windows (DrMemory-Windows-2.3.0-1.msi)](https://github.com/DynamoRIO/drmemory/releases/download/release_2.3.0/DrMemory-Windows-2.3.0-1.msi)
 
