--- a/drmemory/docs/coverage.dox
+++ b/drmemory/docs/coverage.dox
@@ -57,7 +57,7 @@ href="http://ltp.sourceforge.net/coverage/lcov.php">lcov tool</a> to
 produce nice html result pages.
 
 For a full description of the drcov2lcov usage see the \p drcov
-documemtation at http://dynamorio.org/docs/page_drcov.html.
+documemtation at https://dynamorio.org/page_drcov.html.
 
 ****************************************************************************
 ****************************************************************************
