--- a/drmemory/docs/fuzzer.dox
+++ b/drmemory/docs/fuzzer.dox
@@ -185,7 +185,8 @@ target function execution.
    target function execution.
 
 Enabling this option is useful for precisely isolating the input iteration that
-causes a memory leak, which aids in reproduction and minimization.
+causes a memory leak, which aids in reproduction and minimization. The outputs
+of these leak scans are stored in the fuzz_results.txt file.
 
 For example, to fuzz the function \p DrMemFuzzFunc with per-iteration leak scanning enabled,
 you would specify the following command-line option to \p drmemory:
